src/main/gen/com/github/jakobeha/intellijsmplcoccinelle/c/psi/SmPLCParser.java
// This is a generated file. Not intended for manual editing.
package com.github.jakobeha.intellijsmplcoccinelle.c.psi;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.jakobeha.intellijsmplcoccinelle.c.psi.SmPLCTypes.*;
import static com.github.jakobeha.intellijsmplcoccinelle.c.psi.SmPLCParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SmPLCParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return transformation(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(DECL_STMT, MULTI_RULE_ELEM_STMT, RULE_ELEM_STMT, SINGLE_RULE_ELEM_STMT,
      SINGLE_STMT, STMT),
    create_token_set_(DECL, FUNDECL, NAME_OPT_DECL, ONE_DECL,
      SINGLE_ONE_DECL, STMT_NEST_DECL, STRUCT_DECL),
    create_token_set_(CTYPE, DECL_FN_TYPE, DOT_EXPR, EXPR,
      FN_CTYPE, GENERIC_CTYPE, NEST_EXPR, SINGLE_DECL_TYPEDEF_EXPR,
      STMT_NEST_EXPR, TYPE),
  };

  /* ********************************************************** */
  // 'any' | 'strict' | 'forall' | 'exists'
  public static boolean any_strict(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_strict")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_STRICT, "<any strict>");
    r = consumeToken(b, ANY);
    if (!r) r = consumeToken(b, STRICT);
    if (!r) r = consumeToken(b, FORALL);
    if (!r) r = consumeToken(b, EXISTS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // nest_expr
  public static boolean arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG, "<arg>");
    r = nest_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '=' | '-=' | '+=' | '*=' | '/=' | '%=' | '&=' | '|=' | '^=' | '<<=' | '>>='
  public static boolean assign_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_OP, "<assign op>");
    r = consumeToken(b, EQUALS);
    if (!r) r = consumeToken(b, MINUS_EQUALS);
    if (!r) r = consumeToken(b, PLUS_EQUALS);
    if (!r) r = consumeToken(b, TIMES_EQUALS);
    if (!r) r = consumeToken(b, DIVIDE_EQUALS);
    if (!r) r = consumeToken(b, MOD_EQUALS);
    if (!r) r = consumeToken(b, AND_EQUALS);
    if (!r) r = consumeToken(b, OR_EQUALS);
    if (!r) r = consumeToken(b, XOR_EQUALS);
    if (!r) r = consumeToken(b, LSHIFT_EQUALS);
    if (!r) r = consumeToken(b, RSHIFT_EQUALS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '__attribute__' '(' '(' <<commaSeparate WORD>> ')' ')'
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    if (!nextTokenIs(b, ATTRIBUTE_HEAD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE, null);
    r = consumeTokens(b, 1, ATTRIBUTE_HEAD, LPAREN, LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, commaSeparate(b, l + 1, WORD_parser_));
    r = p && report_error_(b, consumeTokens(b, -1, RPAREN, RPAREN)) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '*' | '/' | '%' | '+' | '-' | '<<' | '>>' | '^' | '&' | '|' | '<' | '>' | '<=' | '>=' | '==' | '!=' | '&&' | '||'
  public static boolean bin_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bin_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIN_OP, "<bin op>");
    r = consumeToken(b, TIMES);
    if (!r) r = consumeToken(b, DIVIDE);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, LSHIFT);
    if (!r) r = consumeToken(b, RSHIFT);
    if (!r) r = consumeToken(b, XOR);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GE);
    if (!r) r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, NE);
    if (!r) r = consumeToken(b, DOUBLE_AND);
    if (!r) r = consumeToken(b, DOUBLE_OR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // case_line_default | case_line_case
  public static boolean case_line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_line")) return false;
    if (!nextTokenIs(b, "<case line>", CASE, DEFAULT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_LINE, "<case line>");
    r = case_line_default(b, l + 1);
    if (!r) r = case_line_case(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'case' dot_expr ':' stmt_seq
  public static boolean case_line_case(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_line_case")) return false;
    if (!nextTokenIs(b, CASE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CASE_LINE_CASE, null);
    r = consumeToken(b, CASE);
    p = r; // pin = 1
    r = r && report_error_(b, dot_expr(b, l + 1));
    r = p && report_error_(b, consumeToken(b, COLON)) && r;
    r = p && stmt_seq(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'default' ':' stmt_seq
  public static boolean case_line_default(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_line_default")) return false;
    if (!nextTokenIs(b, DEFAULT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CASE_LINE_DEFAULT, null);
    r = consumeTokens(b, 1, DEFAULT, COLON);
    p = r; // pin = 1
    r = r && stmt_seq(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<p>> (',' <<p>>)*
  static boolean commaSeparate(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = _p.parse(b, l);
    p = r; // pin = 1
    r = r && commaSeparate_1(b, l + 1, _p);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' <<p>>)*
  private static boolean commaSeparate_1(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!commaSeparate_1_0(b, l + 1, _p)) break;
      if (!empty_element_parsed_guard_(b, "commaSeparate_1", c)) break;
    }
    return true;
  }

  // ',' <<p>>
  private static boolean commaSeparate_1_0(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "commaSeparate_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && _p.parse(b, l);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ctype |
  //     funproto |
  //     decl_ident_init |
  //     decl_ident2_init |
  //     decl_fn |
  //     decl_meta
  static boolean common_decl_(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "common_decl_")) return false;
    boolean r;
    r = ctype(b, l + 1);
    if (!r) r = funproto(b, l + 1);
    if (!r) r = decl_ident_init(b, l + 1);
    if (!r) r = decl_ident2_init(b, l + 1);
    if (!r) r = decl_fn(b, l + 1);
    if (!r) r = decl_meta(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '(' <<p>> ('|' <<p>>)* ')'
  public static boolean conjunct(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "conjunct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONJUNCT, null);
    r = consumeToken(b, LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, _p.parse(b, l));
    r = p && report_error_(b, conjunct_2(b, l + 1, _p)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ('|' <<p>>)*
  private static boolean conjunct_2(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "conjunct_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conjunct_2_0(b, l + 1, _p)) break;
      if (!empty_element_parsed_guard_(b, "conjunct_2", c)) break;
    }
    return true;
  }

  // '|' <<p>>
  private static boolean conjunct_2_0(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "conjunct_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, OR);
    p = r; // pin = 1
    r = r && _p.parse(b, l);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // 'const' | 'volatile'
  public static boolean const_vol(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_vol")) return false;
    if (!nextTokenIs(b, "<const vol>", CONST, VOLATILE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_VOL, "<const vol>");
    r = consumeToken(b, CONST);
    if (!r) r = consumeToken(b, VOLATILE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // STRING | INTEGER | '...'
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, INTEGER);
    if (!r) r = consumeToken(b, ELLIPSIS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // struct_decl [struct_decl_list]
  public static boolean continue_struct_decl_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continue_struct_decl_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTINUE_STRUCT_DECL_LIST, "<continue struct decl list>");
    r = struct_decl(b, l + 1);
    r = r && continue_struct_decl_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [struct_decl_list]
  private static boolean continue_struct_decl_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "continue_struct_decl_list_1")) return false;
    struct_decl_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // [const_vol] generic_ctype '*'* |
  //     [const_vol] 'void' '*'+ |
  //     '(' ctype ('|' ctype)* ')'
  public static boolean ctype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, CTYPE, "<type>");
    r = ctype_0(b, l + 1);
    if (!r) r = ctype_1(b, l + 1);
    if (!r) r = ctype_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [const_vol] generic_ctype '*'*
  private static boolean ctype_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ctype_0_0(b, l + 1);
    r = r && generic_ctype(b, l + 1);
    r = r && ctype_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [const_vol]
  private static boolean ctype_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_0_0")) return false;
    const_vol(b, l + 1);
    return true;
  }

  // '*'*
  private static boolean ctype_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, TIMES)) break;
      if (!empty_element_parsed_guard_(b, "ctype_0_2", c)) break;
    }
    return true;
  }

  // [const_vol] 'void' '*'+
  private static boolean ctype_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ctype_1_0(b, l + 1);
    r = r && consumeToken(b, VOID);
    r = r && ctype_1_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [const_vol]
  private static boolean ctype_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_1_0")) return false;
    const_vol(b, l + 1);
    return true;
  }

  // '*'+
  private static boolean ctype_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_1_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, TIMES);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, TIMES)) break;
      if (!empty_element_parsed_guard_(b, "ctype_1_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // '(' ctype ('|' ctype)* ')'
  private static boolean ctype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && ctype(b, l + 1);
    r = r && ctype_2_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('|' ctype)*
  private static boolean ctype_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_2_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ctype_2_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ctype_2_2", c)) break;
    }
    return true;
  }

  // '|' ctype
  private static boolean ctype_2_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_2_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OR);
    r = r && ctype(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'enum' id { <<commaSeparate (dot_expr | '...' [exp_whencode])>> [','] }
  public static boolean ctype_enum(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype_enum")) return false;
    if (!nextTokenIs(b, ENUM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CTYPE_ENUM, null);
    r = consumeToken(b, ENUM);
    p = r; // pin = 1
    r = r && report_error_(b, id(b, l + 1));
    r = p && ctype_enum_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
